test/corpus/statements.txt
================================================================================
Variable declarations
================================================================================

fn test() {
    const x: u8 = 10;
    var y: i32 = 20;
    const z = 30;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (variable_declaration
        name: (identifier)
        type: (primitive_type)
        value: (number_literal))
      (variable_declaration
        name: (identifier)
        type: (primitive_type)
        value: (number_literal))
      (variable_declaration
        name: (identifier)
        value: (number_literal)))))

================================================================================
If statement
================================================================================

fn test() {
    if (x == 1) {
        return 1;
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (if_statement
        condition: (binary_expression
          left: (identifier)
          right: (number_literal))
        consequence: (block
          (return_statement
            value: (number_literal)))))))

================================================================================
If-else statement
================================================================================

fn test() {
    if (x < 10) {
        return 0;
    } else {
        return 1;
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (if_statement
        condition: (binary_expression
          left: (identifier)
          right: (number_literal))
        consequence: (block
          (return_statement
            value: (number_literal)))
        alternative: (block
          (return_statement
            value: (number_literal)))))))

================================================================================
While loop
================================================================================

fn test() {
    while (x < 10) {
        x = x + 1;
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (while_statement
        condition: (binary_expression
          left: (identifier)
          right: (number_literal))
        body: (block
          (assignment_statement
            left: (identifier)
            right: (binary_expression
              left: (identifier)
              right: (number_literal))))))))

================================================================================
For loop
================================================================================

fn test() {
    for i in 0:10 {
        break;
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (for_statement
        variable: (identifier)
        start: (number_literal)
        end: (number_literal)
        body: (block
          (break_statement))))))

================================================================================
Match statement with ranges and alternation
================================================================================

fn dispatch(opcode: u8) {
    match (opcode) {
        0x00 { return; }
        0x01 | 0x11 | 0x21 { return; }
        0x40..=0x7F { return; }
        _ { return; }
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (primitive_type)))
    body: (block
      (expression_statement
        (match_expression
          scrutinee: (identifier)
          (match_arm
            pattern: (literal_pattern
              (number_literal))
            body: (match_arm_body
              (return_statement)))
          (match_arm
            pattern: (or_pattern
              (literal_pattern
                (number_literal))
              (literal_pattern
                (number_literal))
              (literal_pattern
                (number_literal)))
            body: (match_arm_body
              (return_statement)))
          (match_arm
            pattern: (range_pattern
              start: (number_literal)
              end: (number_literal))
            body: (match_arm_body
              (return_statement)))
          (match_arm
            pattern: (wildcard_pattern)
            body: (match_arm_body
              (return_statement))))))))

================================================================================
Match with enum-variant pattern + payload bindings
================================================================================

fn run(op: Op) {
    match (op) {
        Op.Nop { return; }
        Op.LdR8R8(dst, src) { return; }
        _ { return; }
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (named_type
          (identifier))))
    body: (block
      (expression_statement
        (match_expression
          scrutinee: (identifier)
          (match_arm
            pattern: (enum_variant_pattern
              enum: (identifier)
              variant: (identifier))
            body: (match_arm_body
              (return_statement)))
          (match_arm
            pattern: (enum_variant_pattern
              enum: (identifier)
              variant: (identifier)
              bindings: (identifier)
              bindings: (identifier))
            body: (match_arm_body
              (return_statement)))
          (match_arm
            pattern: (wildcard_pattern)
            body: (match_arm_body
              (return_statement))))))))

================================================================================
Break and continue
================================================================================

fn test() {
    while (true) {
        break;
        continue;
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (while_statement
        condition: (boolean_literal)
        body: (block
          (break_statement)
          (continue_statement))))))

================================================================================
Bare return
================================================================================

fn test() {
    return;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (return_statement))))
